<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mycandidato</string>
    <string name="hello_world">Hello world!</string>
    <string name="textvPesquisa">Pesquisas:</string>
    <string name="textvOpcao1">Opção1</string>
    <string name="textvOpcao2">Opção2</string>
    <string name="textvOpcao3">Opção3</string>
    <string name="buttomEnviar">Enviar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pool">PoolActivity</string>
    <string name="result1">Resultado 1:</string>
    <string name="result2">Resultado 2:</string>
    <string name="result3">Resultado 3:</string>
    <string name="idface">Autenticando&#8230;</string>
    <string name="app_id">1449827428617910</string>
    <string name="buttonVotar">Votar</string>

</resources>
